welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:2: error: value update is not a member of Boolean
while(estFaceMur()=false){
      ^